@@ -17,12 +17,10 @@ libinit_balsa_sources = [
   'assistant_helper.h'
   ]
 
-libinit_balsa_compile_args = ['-I' + meson.build_root(),
-                              '-I' + join_paths(meson.source_root(), 'libbalsa'),
-                              '-I' + join_paths(meson.source_root(), 'libnetclient'),
-                              '-I' + join_paths(meson.source_root(), 'src')]
-libinit_balsa_compile_dep = declare_dependency(compile_args : libinit_balsa_compile_args)
-
 libinit_balsa_a = static_library('init_balsa', libinit_balsa_sources,
-                                 dependencies : balsa_deps + [libinit_balsa_compile_dep],
-                                 install      : false)
+                                 dependencies        : balsa_deps,
+                                 include_directories : [top_include,
+                                                        libbalsa_include,
+                                                        libnetclient_include,
+                                                        src_include],
+                                 install             : false)
