@@ -99,31 +99,24 @@ if spell_checker == 'internal'
 endif
 
 locale_dir = join_paths(get_option('prefix'), get_option('datadir'), 'locale')
-balsa_compile_args = ['-DGNOMELOCALEDIR="' + locale_dir + '"',
-                      '-I' + meson.build_root(),
-                      '-I' + meson.source_root(),
-                      '-I' + join_paths(meson.source_root(), 'libbalsa'),
-                      '-I' + join_paths(meson.source_root(), 'libnetclient')]
+balsa_compile_arg = '-DGNOMELOCALEDIR="' + locale_dir + '"'
 
-balsa_compile_dep = declare_dependency(compile_args : balsa_compile_args)
+balsa_compile_dep = declare_dependency(compile_args : balsa_compile_arg)
 balsa_libs = [libinit_balsa_a, libbalsa_a, libimap_a, libnetclient_a]
 
 executable('balsa', balsa_sources,
-           dependencies : balsa_deps + [balsa_compile_dep],
-           link_with    : balsa_libs,
-           install      : true)
+           dependencies        : balsa_deps + [balsa_compile_dep],
+           include_directories : [top_include, libbalsa_include, libnetclient_include],
+           link_with           : balsa_libs,
+           install             : true)
 
 balsa_ab_sources = [
   'ab-main.c',
   'address-book-config.c'
   ]
 
-balsa_ab_compile_args = ['-I' + meson.build_root(),
-                         '-I' + join_paths(meson.source_root(), 'libbalsa')]
-
-balsa_ab_compile_dep  = declare_dependency(compile_args : balsa_ab_compile_args)
-
 executable('balsa_ab', balsa_ab_sources,
-           dependencies : balsa_ab_deps + [balsa_ab_compile_dep],
-           link_with    : libbalsa_a,
-           install      : true)
+           dependencies        : balsa_ab_deps,
+           include_directories : [top_include, libbalsa_include],
+           link_with           : libbalsa_a,
+           install             : true)
